<resources>
    <string name="app_name">Jetpack Components Experiments</string>
    <string name="hello_jetpack">Hello Jetpack!</string>
    <string name="you_are_in_the_main_menu">You\'re already in the main menu!</string>
    <string name="card_sample_description">Using the tutorial from the official website: https://developer.android.com/topic/libraries/architecture/room?hl=fr with some extra features</string>
    <string name="card_sample_title">Basic Example</string>
    <string name="card_sample_subtitle">Room Persistence Library</string>
    <!--Basics with Room-->
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="product_id">Product ID</string>
    <string name="product_name_empty">The product name is empty</string>
    <!--Basics with DataBinding-->
    <string name="basic_data_persistence_with_room">Basic Data Persistence With Room</string>
    <string name="product_description">Throughout football\'s colourful history, Real Madrid have been the masters. This adidas home jersey takes the décollage artwork plastered throughout the club\'s home city as its inspiration. The soft, moisture-absorbing fabric includes mesh cutouts that mimic the artwork\'s standout \"ripped paper\" style. Premium embroidered team details add the finishing touch.  Details:  Regular fit is a slightly looser cut than what players wear on the pitch Short sleeves 100% recycled polyester doubleknit Lightweight fabric with a silky feel Sweat-wicking Climalite fabric Embroidered Real Madrid crest</string>
    <string name="add_to_the_cart">Add To The Cart</string>
    <string name="select_size">Select size</string>
    <string name="color">Color</string>
    <string name="quantity">Quantity</string>
    <string name="official">Official</string>
    <string name="online_store">Online Store</string>
    <string name="register_instructions">Complete the following fields to create your account</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="industry">Industry</string>
    <string name="register">Register</string>
    <string name="login_support_message">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="edition_enterprise">Enterprise Edition</string>
    <string name="edition_free">Free Edition</string>
    <string name="subscribe_to_our_podcast">Subscribe to our podcast</string>
    <string name="save">Save</string>
    <string name="personal_data">Personal Data</string>
    <string name="edition">Edition</string>
    <string name="current_customer">Current Customer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <plurals name="review">
        <item quantity="zero">There\'s no reviews yet</item>
        <item quantity="one">(%d Review)</item>
        <item quantity="many">(%d Reviews)</item>
        <item quantity="other">(%d Reviews)</item>
    </plurals>

    <!--Basics with Navigation-->
    <string name="welcome_to">Welcome to: %1$s</string>
    <string name="next">Next</string>
    <string name="jetpack_navigation">Jetpack Navigation</string>

    <!--Basics with WorkManager-->
    <string name="how_long_should_the_worker">How long should the worker last? (in seconds)</string>
    <string name="launch_worker">Launch Worker</string>
    <string name="jetpack_worker_manager">Jetpack Work Manager</string>
</resources>