<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardMain"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="3dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="4dp"
    android:elevation="3dp"
    app:cardCornerRadius="7dp"
    android:foreground="?attr/selectableItemBackground"
    android:focusable="true"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp">

        <TextView
            android:id="@+id/tvCardMainSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/card_sample_subtitle" />

        <TextView
            android:id="@+id/tvCardMainTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCardMainSubtitle"
            tools:text="@string/card_sample_title" />

        <TextView
            android:id="@+id/tvCardMainDescription"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:gravity="end"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCardMainTitle"
            tools:text="@string/card_sample_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>